# spotify_scraper

./: README.md  pyproject.toml  scraper.py
api/: example.env
api/core/: settings.py  urls.py
api/spotify/: models.py  scraper.py  serializers.py  urls.py  views.py
api/spotify/migrations/: 0001_initial.py
